samples/_failures_safe/1761361235_d61e46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3eaeb133.c: In function ‘main’:
./samples/SAFE/__tmp_3eaeb133.c:172:12: error: expected ‘)’ at end of input
  172 |     if (len
      |        ~   ^
      |            )
./samples/SAFE/__tmp_3eaeb133.c:172:5: error: expected declaration or statement at end of input
  172 |     if (len
      |     ^~
